--- a/src/components/FeatureMovie.css
+++ b/src/components/FeatureMovie.css
@@ -34,10 +34,23 @@
 .description {
     color: #999;
     max-width: 40%;
-    overflow: hidden;
+    max-height: 80px;
+    overflow-x: hidden;
+    overflow-y: scroll;
     text-overflow: ellipsis;
-    -webkit-line-clamp: 5; 
-    -webkit-box-orient: vertical;
+}
+.description::-webkit-scrollbar {
+    width: 0.8rem;
+}
+
+.description::-webkit-scrollbar-track {
+    background: rgb(31, 31, 31);
+}
+
+.description::-webkit-scrollbar-thumb {
+    background-color: rgb(238, 62, 62);
+    border-radius: 1.2rem;
+    border: 3px solid rgb(31, 31, 31);
 }
 .buttons {
     display: flex;
@@ -77,7 +90,7 @@
 
 @media (max-width: 750px) {
     .featured {
-        height: 70vh;
+        height: 80vh;
     }
     .name {
         font-size: 1.8rem;
@@ -87,7 +100,7 @@
     }
     .description {
         font-size: 0.9rem;
-        max-width: 100%;
+        max-width: 50%;
     }
     .btn--mylist, .btn--watch {
         font-size: 1rem;
