--- a/src/components/MovieRow.css
+++ b/src/components/MovieRow.css
@@ -24,18 +24,23 @@ h2 {
     display: inline-block;
     width: 150px;
     cursor: pointer;
-    border-bottom: 40px solid transparent;
+
+    /* border-bottom: 40px solid transparent; */
 }
+
 .item img {
     width: 100%;
     transform: scale(0.9);
     transition: all ease 0.2s;
     border-radius: 0.5rem;
 
-    -webkit-box-reflect: below 2px linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.4));
+    /* -webkit-box-reflect: below 2px linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.4)); */
 }
 .item img:hover {
     transform: scale(1);
+    opacity: 0.7;
+    padding: 0.3rem;
+    border: 2px solid rgb(238, 62, 62);
 }
 
 .icon-left,
