--- a/src/App.scss
+++ b/src/App.scss
@@ -28,7 +28,7 @@ body {
         background: rgb(31, 31, 31);
     }
     &::-webkit-scrollbar-thumb {
-        background-color: var(--red-dark);
+        background-color: var(--red);
         border-radius: 1.2rem;
         border: 3px solid rgb(31, 31, 31);
     }
