--- a/src/App.scss
+++ b/src/App.scss
@@ -6,7 +6,6 @@
 
 :root {
     --red: rgb(238, 62, 62);
-    --red-dark: rgb(197, 54, 54);
     --green: #46d369;
 }
 
@@ -28,7 +27,7 @@ body {
         background: rgb(31, 31, 31);
     }
     &::-webkit-scrollbar-thumb {
-        background-color: var(--red-dark);
+        background-color: var(--red);
         border-radius: 1.2rem;
         border: 3px solid rgb(31, 31, 31);
     }
