--- a/src/components/FeatureMovie.scss
+++ b/src/components/FeatureMovie.scss
@@ -71,6 +71,12 @@
     gap: 0.6rem;
 
     user-select: none;
+
+    a {
+        &:visited {
+            color: white;
+        }
+    }
 }
 .btn {
     font-weight: bold;
