--- a/src/components/MovieRow.scss
+++ b/src/components/MovieRow.scss
@@ -45,6 +45,7 @@ h2 {
                 transform: scale(0.9);
                 transition: all ease 0.2s;
                 border-radius: 0.5rem;
+                box-shadow: 0px 0px 8px 5px rgba(0, 0, 0, 0.705);
         
                 &:hover {
                     transform: scale(1);
