--- a/src/App.scss
+++ b/src/App.scss
@@ -6,6 +6,7 @@
 
 :root {
     --red: rgb(238, 62, 62);
+    --light-red: rgb(245, 47, 47);
     --green: #46d369;
 }
 
@@ -27,7 +28,7 @@ body {
         background: rgb(31, 31, 31);
     }
     &::-webkit-scrollbar-thumb {
-        background-color: var(--red);
+        background-color: var(--light-red);
         border-radius: 1.2rem;
         border: 3px solid rgb(31, 31, 31);
     }
